--- a/iConfs-iOS/MainStoryboard.storyboard
+++ b/iConfs-iOS/MainStoryboard.storyboard
@@ -104,7 +104,7 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jjm-gF-B4D">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="72" id="pKA-JQ-37W"/>
+                                    <constraint firstAttribute="height" constant="72" id="fnF-LU-D9v"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" size="button"/>
                                 <state key="normal" image="Organization.jpg">
@@ -119,9 +119,6 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MhJ-BT-VIX">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="73" id="NXU-us-oBy"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                                 <state key="normal" image="Notifications.jpg">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -152,8 +149,8 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nSP-t5-Er5">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="73" id="JkE-fY-OM9"/>
                                     <constraint firstAttribute="height" constant="72" id="RnX-BC-Zbh"/>
+                                    <constraint firstAttribute="width" constant="73" id="vlM-VE-si3"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" image="Schedule.jpg">
@@ -182,23 +179,23 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Networking" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cXx-mh-isf">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="70" id="jxB-w6-Abq"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Organization" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zva-c2-rDI">
                                 <constraints>
+                                    <constraint firstAttribute="width" constant="78" id="l2v-qN-KOo"/>
                                     <constraint firstAttribute="height" constant="21" id="oJU-yW-cVI"/>
-                                    <constraint firstAttribute="width" constant="78" id="odF-sE-mzd"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NxF-Kn-QJF">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="72" id="vGg-dY-Fnd"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Button" image="maps.jpg">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -243,44 +240,72 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NdX-Ng-K96">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="72" id="jUn-a7-eSy"/>
+                                    <constraint firstAttribute="width" constant="73" id="qOf-Kl-GYp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" image="Contacts.jpg">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Contacts" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NdF-HP-aU2">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="CSq-g5-VmB"/>
+                                    <constraint firstAttribute="height" constant="21" id="g4w-3A-yHH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="12d-a9-ce1" firstAttribute="leading" secondItem="cXx-mh-isf" secondAttribute="leading" type="default" id="1Gl-B9-dWF"/>
-                            <constraint firstItem="Jjm-gF-B4D" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="176" id="3zl-pf-obP"/>
-                            <constraint firstAttribute="trailing" secondItem="NxF-Kn-QJF" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="5sK-0H-amP"/>
+                            <constraint firstItem="Jjm-gF-B4D" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="176" id="3mZ-yJ-Ar6"/>
                             <constraint firstItem="zva-c2-rDI" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="7Ah-yJ-XHI"/>
                             <constraint firstItem="MhJ-BT-VIX" firstAttribute="bottom" secondItem="nSP-t5-Er5" secondAttribute="bottom" type="default" id="9at-1f-3W8"/>
+                            <constraint firstAttribute="bottom" secondItem="NdF-HP-aU2" secondAttribute="bottom" constant="94" id="9hU-Sr-hcz"/>
                             <constraint firstItem="MFh-CY-QnT" firstAttribute="top" secondItem="zva-c2-rDI" secondAttribute="top" type="default" id="CJj-jx-PmR"/>
                             <constraint firstItem="cXx-mh-isf" firstAttribute="baseline" secondItem="Xnm-P4-fzq" secondAttribute="baseline" type="default" id="CWr-Au-rHU"/>
                             <constraint firstItem="MFh-CY-QnT" firstAttribute="baseline" secondItem="zva-c2-rDI" secondAttribute="baseline" type="default" id="E5Z-6H-uAK"/>
                             <constraint firstItem="Xnm-P4-fzq" firstAttribute="baseline" secondItem="PJx-wi-3C3" secondAttribute="baseline" type="default" id="EVq-49-6Qy"/>
+                            <constraint firstItem="NdX-Ng-K96" firstAttribute="centerX" secondItem="qAQ-Vj-hDn" secondAttribute="centerX" type="default" id="H1D-yR-lQI"/>
+                            <constraint firstItem="zva-c2-rDI" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="248" id="HY7-jv-ViO"/>
                             <constraint firstItem="Xnm-P4-fzq" firstAttribute="trailing" secondItem="MhJ-BT-VIX" secondAttribute="trailing" type="default" id="LgV-2m-hPC"/>
                             <constraint firstItem="nSP-t5-Er5" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="O1q-NL-e9e"/>
                             <constraint firstItem="nSP-t5-Er5" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="45" id="Osm-OT-wA0"/>
                             <constraint firstItem="PJx-wi-3C3" firstAttribute="centerX" secondItem="zva-c2-rDI" secondAttribute="centerX" type="default" id="Pyg-eF-zxa"/>
-                            <constraint firstItem="NxF-Kn-QJF" firstAttribute="leading" secondItem="UFn-7s-Y4L" secondAttribute="leading" type="default" id="QKs-uM-XBE"/>
+                            <constraint firstItem="NdF-HP-aU2" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="133" id="Qnt-Ad-PDC"/>
                             <constraint firstItem="PJx-wi-3C3" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="117" id="R10-QU-ids"/>
                             <constraint firstItem="Jjm-gF-B4D" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="RUc-d9-eHi"/>
+                            <constraint firstItem="NxF-Kn-QJF" firstAttribute="leading" secondItem="Xnm-P4-fzq" secondAttribute="leading" type="default" id="SqC-L3-yvZ"/>
+                            <constraint firstItem="NxF-Kn-QJF" firstAttribute="bottom" secondItem="Jjm-gF-B4D" secondAttribute="bottom" type="default" id="UDa-yx-2bl"/>
+                            <constraint firstAttribute="bottom" secondItem="NdX-Ng-K96" secondAttribute="bottom" constant="116" id="WMB-Qs-vkm"/>
                             <constraint firstItem="Xnm-P4-fzq" firstAttribute="leading" secondItem="MhJ-BT-VIX" secondAttribute="leading" type="default" id="Wq7-9o-XlN"/>
                             <constraint firstItem="UFn-7s-Y4L" firstAttribute="top" secondItem="MhJ-BT-VIX" secondAttribute="top" type="default" id="YrI-h3-vkw"/>
+                            <constraint firstItem="NxF-Kn-QJF" firstAttribute="trailing" secondItem="Xnm-P4-fzq" secondAttribute="trailing" type="default" id="Zgj-H1-x5P"/>
                             <constraint firstItem="MhJ-BT-VIX" firstAttribute="top" secondItem="nSP-t5-Er5" secondAttribute="top" type="default" id="aLO-zg-C6O"/>
                             <constraint firstItem="Xnm-P4-fzq" firstAttribute="top" secondItem="PJx-wi-3C3" secondAttribute="top" type="default" id="dv9-i1-qOh"/>
                             <constraint firstAttribute="trailing" secondItem="Ukj-8s-PZJ" secondAttribute="trailing" constant="28" id="eCa-JX-zbP"/>
                             <constraint firstAttribute="trailing" secondItem="UFn-7s-Y4L" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="gGY-wk-BQC"/>
                             <constraint firstItem="Ukj-8s-PZJ" firstAttribute="top" secondItem="MFh-CY-QnT" secondAttribute="top" type="default" id="gPD-zz-yRj"/>
-                            <constraint firstAttribute="bottom" secondItem="NxF-Kn-QJF" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="pOG-O7-wvz"/>
+                            <constraint firstItem="NdX-Ng-K96" firstAttribute="leading" secondItem="NxF-Kn-QJF" secondAttribute="leading" type="default" id="leR-Ql-I5V"/>
+                            <constraint firstItem="NdX-Ng-K96" firstAttribute="trailing" secondItem="NxF-Kn-QJF" secondAttribute="trailing" type="default" id="oMj-dm-y4G"/>
                             <constraint firstItem="MFh-CY-QnT" firstAttribute="leading" secondItem="qAQ-Vj-hDn" secondAttribute="leading" constant="144" id="r65-fO-8H2"/>
                             <constraint firstAttribute="trailing" secondItem="cXx-mh-isf" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="rmc-2s-t11"/>
-                            <constraint firstItem="Xnm-P4-fzq" firstAttribute="centerX" secondItem="qAQ-Vj-hDn" secondAttribute="centerX" type="default" id="sef-6H-ucx"/>
+                            <constraint firstItem="NxF-Kn-QJF" firstAttribute="top" secondItem="Jjm-gF-B4D" secondAttribute="top" type="default" id="rpX-CD-uKk"/>
                             <constraint firstItem="Jjm-gF-B4D" firstAttribute="trailing" secondItem="nSP-t5-Er5" secondAttribute="trailing" type="default" id="sh0-qA-d5j"/>
-                            <constraint firstItem="Jjm-gF-B4D" firstAttribute="top" secondItem="12d-a9-ce1" secondAttribute="top" type="default" id="ucl-YQ-HFS"/>
+                            <constraint firstItem="NxF-Kn-QJF" firstAttribute="top" secondItem="12d-a9-ce1" secondAttribute="top" type="default" id="tEP-nO-220"/>
                             <constraint firstItem="cXx-mh-isf" firstAttribute="top" secondItem="Xnm-P4-fzq" secondAttribute="top" type="default" id="wfZ-zP-1Jp"/>
                             <constraint firstItem="Ukj-8s-PZJ" firstAttribute="baseline" secondItem="MFh-CY-QnT" secondAttribute="baseline" type="default" id="wgV-fm-dOi"/>
-                            <constraint firstItem="Ukj-8s-PZJ" firstAttribute="top" secondItem="qAQ-Vj-hDn" secondAttribute="top" constant="248" id="x3s-5r-7qp"/>
                             <constraint firstItem="UFn-7s-Y4L" firstAttribute="bottom" secondItem="MhJ-BT-VIX" secondAttribute="bottom" type="default" id="yNX-F9-Jdc"/>
-                            <constraint firstItem="Jjm-gF-B4D" firstAttribute="bottom" secondItem="12d-a9-ce1" secondAttribute="bottom" type="default" id="z5U-tP-HKh"/>
-                            <constraint firstAttribute="trailing" secondItem="12d-a9-ce1" secondAttribute="trailing" constant="17" id="zck-ey-KTY"/>
+                            <constraint firstItem="NxF-Kn-QJF" firstAttribute="bottom" secondItem="12d-a9-ce1" secondAttribute="bottom" type="default" id="yil-1q-rax"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="iConfs" id="IIK-dc-mJ7">
@@ -294,7 +319,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QdX-JP-ijD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1506" y="-305"/>
+            <point key="canvasLocation" x="1491" y="-221"/>
         </scene>
         <!--Networking View Controller-->
         <scene sceneID="Nyx-sv-VA1">
@@ -665,7 +690,7 @@
             </objects>
             <point key="canvasLocation" x="1021" y="547"/>
         </scene>
-        <!--Image View Controller-->
+        <!--Image View Controller - Maps-->
         <scene sceneID="D63-QF-twy">
             <objects>
                 <viewController id="6AR-Am-Pii" customClass="ImageViewController" sceneMemberID="viewController">
@@ -683,14 +708,16 @@
                             <constraint firstItem="w3V-hJ-NmC" firstAttribute="top" secondItem="ooJ-QK-DGj" secondAttribute="top" type="default" id="iCj-5t-hoH"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="qpS-GM-uLe"/>
+                    <navigationItem key="navigationItem" title="Maps" id="qpS-GM-uLe">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="LsS-U5-rqR"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="scrollView" destination="w3V-hJ-NmC" id="Ls2-oa-91R"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Vd-fR-HUc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1898" y="403"/>
+            <point key="canvasLocation" x="1683" y="451"/>
         </scene>
         <!--EventUI View Controller-->
         <scene sceneID="dBg-eA-mFn">
@@ -771,6 +798,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Contacts.jpg" width="50" height="50"/>
         <image name="Networking.jpg" width="50" height="50"/>
         <image name="Notes.jpg" width="50" height="50"/>
         <image name="Notifications.jpg" width="50" height="50"/>
